# DWIN_T5UIC1_LCD

./: DWIN_Screen.py  README.md  dwinlcd.py  encoder.py  printerInterface.py  pyproject.toml  run.py  simpleLCD.service
